--- a/videosdk/src/main/res/layout/layout_chat.xml
+++ b/videosdk/src/main/res/layout/layout_chat.xml
@@ -31,6 +31,7 @@
     <EditText
         android:id="@+id/message_edit_text"
         android:layout_width="0dp"
+        android:hint="@string/chat_message_field_hint"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1" />
