--- a/videosdk/src/main/res/layout/activity_live_session.xml
+++ b/videosdk/src/main/res/layout/activity_live_session.xml
@@ -43,10 +43,19 @@
 
     <com.twilio.video.VideoView
         android:id="@+id/videoview_main"
-        android:layout_width="0dp"
+        android:layout_width="100dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/recyclerview_livestream"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/videoview_second"
+        app:layout_constraintTop_toBottomOf="@+id/iv_leave_session_btn" />
+
+    <com.twilio.video.VideoView
+        android:id="@+id/videoview_second"
+        android:layout_width="100dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerview_livestream"
+        app:layout_constraintLeft_toRightOf="@+id/videoview_main"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_leave_session_btn" />
 
