--- a/videosdk/src/main/res/layout/layout_chat.xml
+++ b/videosdk/src/main/res/layout/layout_chat.xml
@@ -7,32 +7,23 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize">
 
-    <RelativeLayout
-        android:background="@color/chatbar_btn_light_black"
+    <ImageView
+        android:id="@+id/chat_toggle"
+        android:src="@drawable/ic_directions_boat_white_36dp"
+        android:padding="6dp"
         android:layout_width="wrap_content"
-        android:gravity="center"
-        android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/chat_toggle"
-            android:background="@drawable/chat_toggle_outline"
-            android:text="@string/chat"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:textSize="20sp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:textColor="@android:color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
+        android:layout_height="match_parent" />
 
     <EditText
         android:id="@+id/message_edit_text"
         android:layout_width="0dp"
+        android:background="@drawable/background_enter_chat_message"
         android:hint="@string/chat_message_field_hint"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
         android:layout_gravity="center_vertical"
         android:layout_weight="1" />
 
@@ -43,7 +34,5 @@
         android:layout_gravity="bottom"
         android:enabled="false"
         android:text="@string/send_button_label" />
-
-
 
 </LinearLayout>
