--- a/videosdk/src/main/res/layout/layout_chat.xml
+++ b/videosdk/src/main/res/layout/layout_chat.xml
@@ -1,38 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:gravity="center_vertical"
-    android:background="@android:color/black"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize">
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/chat_toggle"
-        android:src="@drawable/ic_directions_boat_white_36dp"
-        android:padding="6dp"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+    <ListView
+        android:id="@+id/listview_livesession_chat"
+        android:layout_above="@+id/layout_chat_bottom_bar"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:requiresFadingEdge="vertical"
+        android:fadingEdgeLength="70dp"
+        android:visibility="visible"
+        android:stackFromBottom="true"
+        android:divider="@null"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
 
-    <EditText
-        android:id="@+id/message_edit_text"
-        android:layout_width="0dp"
-        android:background="@drawable/background_enter_chat_message"
-        android:hint="@string/chat_message_field_hint"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="4dp"
-        android:layout_marginTop="4dp"
-        android:paddingLeft="4dp"
-        android:paddingRight="4dp"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1" />
+    <LinearLayout
+        android:id="@+id/layout_chat_bottom_bar"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:background="@android:color/black"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize">
 
-    <Button
-        android:id="@+id/send_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:enabled="false"
-        android:text="@string/send_button_label" />
+        <ImageView
+            android:id="@+id/chat_toggle"
+            android:src="@drawable/ic_directions_boat_white_36dp"
+            android:padding="6dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/message_edit_text"
+            android:layout_width="0dp"
+            android:background="@drawable/background_enter_chat_message"
+            android:hint="@string/chat_message_field_hint"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="4dp"
+            android:layout_marginTop="4dp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/send_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:enabled="false"
+            android:text="@string/send_button_label" />
+
+    </LinearLayout>
+
+</RelativeLayout>
