--- a/videosdk/src/main/res/layout/layout_chat.xml
+++ b/videosdk/src/main/res/layout/layout_chat.xml
@@ -6,12 +6,13 @@
 
     <ListView
         android:id="@+id/listview_livesession_chat"
+        android:background="@drawable/background_chat_list"
         android:layout_above="@+id/layout_chat_bottom_bar"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingBottom="10dp"
         android:requiresFadingEdge="vertical"
         android:fadingEdgeLength="70dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:stackFromBottom="true"
         android:divider="@null"
         android:layout_width="match_parent"
