--- a/videosdk/src/main/res/layout/layout_chat.xml
+++ b/videosdk/src/main/res/layout/layout_chat.xml
@@ -39,10 +39,12 @@
             android:layout_width="0dp"
             android:background="@drawable/background_enter_chat_message"
             android:hint="@string/chat_message_field_hint"
+            android:textColorHint="@android:color/darker_gray"
+            android:textColor="@android:color/darker_gray"
             android:layout_height="match_parent"
             android:layout_marginBottom="4dp"
             android:layout_marginTop="4dp"
-            android:paddingLeft="4dp"
+            android:paddingLeft="12dp"
             android:paddingRight="4dp"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
