--- a/videosdk/src/main/res/layout/layout_chat.xml
+++ b/videosdk/src/main/res/layout/layout_chat.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
 
-        <EditText
+        <com.dabkick.videosdk.livesession.chat.ClearFocusBackPressedEditText
             android:id="@+id/message_edit_text"
             android:layout_width="0dp"
             android:background="@drawable/background_enter_chat_message"
