--- a/videosdk/src/main/res/layout/activity_live_session.xml
+++ b/videosdk/src/main/res/layout/activity_live_session.xml
@@ -17,12 +17,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.twilio.video.VideoView
+        android:id="@+id/main_videoview"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_livestream"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_livestream_bar"
         tools:listitem="@layout/livestream_add_friend_viewholder"
-        app:layout_constraintBottom_toTopOf="@+id/layout_chat"/>
+        android:layout_marginBottom="?android:attr/actionBarSize"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <include
         android:id="@+id/layout_chat"
@@ -30,24 +40,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent" />
-
-    <com.twilio.video.VideoView
-        android:id="@+id/videoview_main"
-        android:layout_width="100dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerview_livestream"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/videoview_second"
-        app:layout_constraintTop_toBottomOf="@+id/iv_leave_session_btn" />
-
-    <com.twilio.video.VideoView
-        android:id="@+id/videoview_second"
-        android:layout_width="100dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerview_livestream"
-        app:layout_constraintLeft_toRightOf="@+id/videoview_main"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_leave_session_btn" />
-
 
 </android.support.constraint.ConstraintLayout>
