--- a/videosdk/src/main/res/layout/activity_live_session.xml
+++ b/videosdk/src/main/res/layout/activity_live_session.xml
@@ -18,6 +18,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_stage"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_stage"
+        android:layout_marginBottom="?android:attr/actionBarSize"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerview_livestream"/>
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_livestream"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_livestream_bar"
