--- a/videosdk/src/main/res/values/dimens.xml
+++ b/videosdk/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="height_livestream_bar">180dp</dimen>
     <dimen name="width_livestream_bar_item">130dp</dimen>
+    <dimen name="height_stage">200dp</dimen>
 </resources>
