--- a/videosdk/src/main/res/layout/item_stage.xml
+++ b/videosdk/src/main/res/layout/item_stage.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<VideoView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.dabkick.videosdk.livesession.stage.ObservableVideoView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_stage_videoview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</VideoView>
+    android:layout_height="match_parent"/>
