--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent" />
 
     <com.dabkick.videosdk.developerbutton.DabKickVideoButton
+        android:id="@+id/dabkick_video_button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
