--- a/videosdk/src/main/res/layout/item_stage.xml
+++ b/videosdk/src/main/res/layout/item_stage.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.dabkick.videosdk.livesession.stage.ObservableVideoView
+<com.devbrackets.android.exomedia.ui.widget.VideoView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_stage_videoview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    app:useDefaultControls="true"
+    />
