--- a/videosdk/src/main/res/layout/layout_chat.xml
+++ b/videosdk/src/main/res/layout/layout_chat.xml
@@ -57,7 +57,7 @@
             android:paddingLeft="4dp"
             android:scrollbars="none">
 
-            <com.dabkick.videosdk.livesession.emoji.EmojiLayout
+            <com.dabkick.videosdk.livesession.chat.EmojiLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
