--- a/videosdk/src/main/res/values/color.xml
+++ b/videosdk/src/main/res/values/color.xml
@@ -3,5 +3,6 @@
 
     <color name="chatbar_btn_light_black">#212121</color>
     <color name="chatbar_btn_outline">#dd1d65</color>
-
+    <color name="pink">#FF4081</color>
+    <color name="white">#FFFFFF</color>
 </resources>
