--- a/videosdk/src/main/res/layout/activity_live_session.xml
+++ b/videosdk/src/main/res/layout/activity_live_session.xml
@@ -29,19 +29,28 @@
     <ImageView
         android:id="@+id/iv_media_drawer"
         android:onClick="showContentDialog"
-        android:layout_width="100dp"
+        android:layout_width="50dp"
         android:layout_height="@dimen/height_livestream_bar"
-        android:background="@android:color/holo_green_dark"
-        app:layout_constraintBottom_toBottomOf="@+id/recyclerview_livestream" />
+        android:background="@drawable/left_corner"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerview_livestream"
+        app:layout_constraintStart_toEndOf="@+id/frag_media_drawer"
+        android:src="@drawable/ic_group_add_white_36dp"/>
+
+    <FrameLayout
+        android:id="@+id/frag_media_drawer"
+        android:layout_width="250dp"
+        android:layout_height="180dp"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerview_livestream"
+        android:visibility="gone"></FrameLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_livestream"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="@dimen/height_livestream_bar"
         android:layout_marginBottom="?android:attr/actionBarSize"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_media_drawer"
+        app:layout_constraintRight_toRightOf="parent"
         tools:listitem="@layout/livestream_add_friend_viewholder" />
 
     <ListView
