--- a/videosdk/src/main/res/layout/layout_content_dialog_fragment.xml
+++ b/videosdk/src/main/res/layout/layout_content_dialog_fragment.xml
@@ -10,7 +10,10 @@
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabMode="scrollable" />
+        app:tabMode="scrollable"
+        android:background="#8B8AF0"
+        app:tabIndicatorColor="#8B8AF0"
+        app:tabIndicatorHeight="0dp"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
