--- a/videosdk/src/main/res/layout/activity_live_session.xml
+++ b/videosdk/src/main/res/layout/activity_live_session.xml
@@ -24,12 +24,30 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_stage"
         android:layout_marginBottom="?android:attr/actionBarSize"
+        app:layout_constraintBottom_toTopOf="@+id/layout_chat"/>
+
+    <include
+        android:id="@+id/layout_chat"
+        layout="@layout/layout_chat"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toTopOf="@+id/recyclerview_livestream"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_livestream"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/height_livestream_bar"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="96dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/iv_add_friends"
+        tools:listitem="@layout/livestream_add_friend_viewholder" />
 
     <ImageView
         android:id="@+id/iv_media_drawer"
         android:onClick="showContentDialog"
-        android:layout_width="50dp"
+        android:layout_width="30dp"
         android:layout_height="@dimen/height_livestream_bar"
         android:background="@drawable/left_corner"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerview_livestream"
@@ -39,7 +57,7 @@
     <ImageView
         android:id="@+id/iv_add_friends"
         android:onClick="showInviteFriendChooser"
-        android:layout_width="50dp"
+        android:layout_width="30dp"
         android:layout_height="@dimen/height_livestream_bar"
         android:background="@drawable/right_corner"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerview_livestream"
@@ -53,40 +71,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/recyclerview_livestream"
         android:visibility="gone"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview_livestream"
-        android:layout_width="50dp"
-        android:layout_height="@dimen/height_livestream_bar"
-        android:layout_marginBottom="?android:attr/actionBarSize"
-        android:layout_marginStart="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/iv_add_friends"
-        tools:listitem="@layout/livestream_add_friend_viewholder" />
-
-    <ListView
-        android:id="@+id/listview_livesession_chat"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_alignParentStart="true"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerview_livestream"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/background_chat_list"
-        android:divider="@null"
-        android:fadingEdgeLength="70dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="10dp"
-        android:requiresFadingEdge="vertical"
-        android:stackFromBottom="true"
-        android:visibility="invisible" />
-
-    <include
-        android:id="@+id/layout_chat"
-        layout="@layout/layout_chat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
     <RelativeLayout
         android:id="@+id/container_layout"
         android:layout_width="match_parent"
@@ -94,5 +78,25 @@
         android:visibility="visible">
 
     </RelativeLayout>
+
+    <ListView
+        android:id="@+id/listview_livesession_chat"
+        android:layout_width="250dp"
+        android:layout_height="200dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/rectangle_chat_list"
+        android:divider="@null"
+        android:fadingEdgeLength="70dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:requiresFadingEdge="vertical"
+        android:stackFromBottom="true"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/layout_chat"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 
 </android.support.constraint.ConstraintLayout>
