--- a/videosdk/src/main/res/layout/chat_message.xml
+++ b/videosdk/src/main/res/layout/chat_message.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="0dp"
         android:textSize="17sp"
         tools:text="Chat Message"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chat_message_author" />
 
@@ -24,7 +24,7 @@
         android:layout_marginTop="10dp"
         android:textSize="12sp"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         tools:text="Author name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
