--- a/videosdk/src/main/res/layout/layout_chat.xml
+++ b/videosdk/src/main/res/layout/layout_chat.xml
@@ -9,7 +9,7 @@
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:background="@android:color/black"
+        android:background="#CCCCCC"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
 
@@ -30,7 +30,7 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="4dp"
             android:layout_marginTop="4dp"
-            android:paddingLeft="12dp"
+            android:paddingLeft="4dp"
             android:paddingRight="4dp"
             android:layout_gravity="center_vertical"
             android:inputType="text"
@@ -41,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="38dp"
             android:paddingLeft="4dp"
+            android:layout_marginTop="4dp"
             android:scrollbars="none">
 
             <com.dabkick.videosdk.livesession.emoji.EmojiLayout
