--- a/videosdk/src/main/res/layout/layout_content_dialog_fragment.xml
+++ b/videosdk/src/main/res/layout/layout_content_dialog_fragment.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/chatbar_btn_light_black"
-    android:layout_width="300dp"
-    android:layout_height="300dp"
+    android:layout_width="250dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <android.support.design.widget.TabLayout
