--- a/videosdk/src/main/res/layout/layout_chat.xml
+++ b/videosdk/src/main/res/layout/layout_chat.xml
@@ -15,7 +15,7 @@
 
         <ImageView
             android:id="@+id/chat_toggle"
-            android:src="@drawable/ic_directions_boat_white_36dp"
+            android:src="@drawable/ic_show_chat"
             android:padding="6dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
