--- a/videosdk/src/main/res/layout/layout_chat.xml
+++ b/videosdk/src/main/res/layout/layout_chat.xml
@@ -11,13 +11,13 @@
         android:gravity="center_vertical"
         android:background="#CCCCCC"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="40dp">
 
         <ImageView
             android:id="@+id/chat_toggle"
             android:src="@drawable/ic_show_chat"
             android:padding="6dp"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="match_parent" />
 
         <com.dabkick.videosdk.livesession.chat.ClearFocusBackPressedEditText
