1.left and right corner button xml made to use values from dimen and color xml

--- a/videosdk/src/main/res/values/color.xml
+++ b/videosdk/src/main/res/values/color.xml
@@ -5,4 +5,5 @@
     <color name="chatbar_btn_outline">#dd1d65</color>
     <color name="pink">#FF4081</color>
     <color name="white">#FFFFFF</color>
+    <color name="blue">#0000FE</color>
 </resources>
