--- a/videosdk/src/main/res/drawable/left_corner.xml
+++ b/videosdk/src/main/res/drawable/left_corner.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#0000FE" />
+    <solid android:color="@color/blue" />
 
-    <corners android:bottomLeftRadius="0dp"
-        android:topLeftRadius="0dp"
-        android:topRightRadius="20dp"
-        android:bottomRightRadius="20dp" />
-    <stroke android:width="1dp" android:color="#0000FE"
+    <corners android:bottomLeftRadius="@dimen/straight_corner"
+        android:topLeftRadius="@dimen/straight_corner"
+        android:topRightRadius="@dimen/round_corner_radius"
+        android:bottomRightRadius="@dimen/round_corner_radius" />
+    <stroke android:width="@dimen/stroke_width" android:color="@color/blue"
         />
 </shape>
