--- a/videosdk/src/main/res/layout/emoji_layout.xml
+++ b/videosdk/src/main/res/layout/emoji_layout.xml
@@ -8,81 +8,81 @@
 
             <ImageView
                 android:id="@+id/emoji_icon1"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="@dimen/emoji_height_width"
+                android:layout_height="@dimen/emoji_height_width"
                 android:onClick="onClickDefault"
                 android:src="@drawable/reactions_default" />
 
 
             <ImageView
                 android:id="@+id/emoji_icon2"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="4dp"
+                android:layout_width="@dimen/emoji_height_width"
+                android:layout_height="@dimen/emoji_height_width"
+                android:layout_marginLeft="@dimen/emoji_margin_left"
                 android:onClick="onClickCool"
                 android:src="@drawable/cool" />
 
             <ImageView
                 android:id="@+id/emoji_icon3"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="4dp"
+                android:layout_width="@dimen/emoji_height_width"
+                android:layout_height="@dimen/emoji_height_width"
+                android:layout_marginLeft="@dimen/emoji_margin_left"
                 android:onClick="onClickWinky"
                 android:src="@drawable/winky" />
 
             <ImageView
                 android:id="@+id/emoji_icon4"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="4dp"
+                android:layout_width="@dimen/emoji_height_width"
+                android:layout_height="@dimen/emoji_height_width"
+                android:layout_marginLeft="@dimen/emoji_margin_left"
                 android:onClick="onClickLove"
                 android:src="@drawable/love" />
 
             <ImageView
                 android:id="@+id/emoji_icon5"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="4dp"
+                android:layout_width="@dimen/emoji_height_width"
+                android:layout_height="@dimen/emoji_height_width"
+                android:layout_marginLeft="@dimen/emoji_margin_left"
                 android:onClick="onClicktongue"
                 android:src="@drawable/tongue" />
 
             <ImageView
                 android:id="@+id/emoji_icon6"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="4dp"
+                android:layout_width="@dimen/emoji_height_width"
+                android:layout_height="@dimen/emoji_height_width"
+                android:layout_marginLeft="@dimen/emoji_margin_left"
                 android:onClick="onClickRofl"
                 android:src="@drawable/rofl" />
 
             <ImageView
                 android:id="@+id/emoji_icon7"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="4dp"
+                android:layout_width="@dimen/emoji_height_width"
+                android:layout_height="@dimen/emoji_height_width"
+                android:layout_marginLeft="@dimen/emoji_margin_left"
                 android:onClick="onClickCrying"
                 android:src="@drawable/crying" />
 
             <ImageView
                 android:id="@+id/emoji_icon8"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="4dp"
+                android:layout_width="@dimen/emoji_height_width"
+                android:layout_height="@dimen/emoji_height_width"
+                android:layout_marginLeft="@dimen/emoji_margin_left"
                 android:onClick="onClickAngry"
                 android:src="@drawable/angry" />
 
             <ImageView
                 android:id="@+id/emoji_icon9"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="4dp"
+                android:layout_width="@dimen/emoji_height_width"
+                android:layout_height="@dimen/emoji_height_width"
+                android:layout_marginLeft="@dimen/emoji_margin_left"
                 android:onClick="onClickXEyes"
                 android:src="@drawable/x_eyes" />
 
             <ImageView
                 android:id="@+id/emoji_icon10"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="4dp"
+                android:layout_width="@dimen/emoji_height_width"
+                android:layout_height="@dimen/emoji_height_width"
+                android:layout_marginLeft="@dimen/emoji_margin_left"
                 android:onClick="onClickShocked"
                 android:src="@drawable/shocked" />
 </LinearLayout>
