--- a/videosdk/src/main/res/values/dimens.xml
+++ b/videosdk/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="round_corner_radius">20dp</dimen>
     <dimen name="straight_corner">0dp</dimen>
     <dimen name="stroke_width">1dp</dimen>
+    <dimen name="emoji_height_width">30dp</dimen>
+    <dimen name="emoji_margin_left">4dp</dimen>
 </resources>
