1. Solved issue of layout above chat moving up when KB comes up for chatting

--- a/videosdk/src/main/res/layout/activity_live_session.xml
+++ b/videosdk/src/main/res/layout/activity_live_session.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/holo_orange_light"
+    android:keepScreenOn="true"
+    tools:context="com.dabkick.videosdk.livesession.LiveSessionActivity">
+
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -24,7 +34,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_stage"
         android:layout_marginBottom="?android:attr/actionBarSize"
-        app:layout_constraintBottom_toTopOf="@+id/layout_chat"/>
+        app:layout_constraintBottom_toTopOf="@+id/layout_chat"
+        app:layout_constraintTop_toBottomOf="@id/iv_leave_session_btn"/>
 
     <include
         android:id="@+id/layout_chat"
@@ -113,3 +124,5 @@
         android:visibility="gone"/>
 
 </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
