--- a/videosdk/src/main/res/layout/video_thumbnails.xml
+++ b/videosdk/src/main/res/layout/video_thumbnails.xml
@@ -1,45 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="130dp"
-    android:layout_height="130dp" >
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="@dimen/video_thumbnail_ht_wdth"
+    android:layout_height="@dimen/video_thumbnail_ht_wdth" >
 
     <ImageView
-            android:layout_width="130dp"
-            android:layout_height="130dp"
+            android:layout_width="@dimen/video_thumbnail_ht_wdth"
+            android:layout_height="@dimen/video_thumbnail_ht_wdth"
         android:src="@drawable/generic_avatar_cat_v70"
         android:id="@+id/first_img"
         android:scaleType="centerCrop"/>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginBottom="5dp">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Title"
         android:textColor="@color/chatbar_btn_light_black"
-        android:id="@+id/title"/>
+        android:id="@+id/title"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/length"
+        android:layout_marginLeft="@dimen/video_thumbnail_margin_lft_btm"
+        android:layout_marginBottom="@dimen/video_thumbnail_margin_lft_btm" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="length"
         android:id="@+id/length"
-        android:layout_below="@+id/title"
-        android:layout_marginTop="2dp"
-        android:textColor="@color/chatbar_btn_light_black"/>
+        android:textColor="@color/chatbar_btn_light_black"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/author"
+        android:layout_marginLeft="@dimen/video_thumbnail_margin_lft_btm"
+        android:layout_marginBottom="@dimen/video_thumbnail_margin_lft_btm" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Author"
         android:id="@+id/author"
-        android:layout_below="@+id/length"
-        android:layout_marginTop="2dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="@dimen/video_thumbnail_margin_lft_btm"
+        android:layout_marginBottom="@dimen/video_thumbnail_margin_lft_btm"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:textColor="@color/chatbar_btn_light_black"/>
 
-    </RelativeLayout>
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
