--- a/videosdk/src/main/res/layout/livestream_participant_viewholder.xml
+++ b/videosdk/src/main/res/layout/livestream_participant_viewholder.xml
@@ -4,18 +4,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/livestream_item">
 
-    <TextView
-        android:id="@+id/livestream_participant_name"
-        android:gravity="center"
-        android:textColor="@android:color/white"
-        android:background="@color/chatbar_btn_outline"
+    <ImageView
+        android:src="@drawable/ic_videocam_white_36dp"
         style="@style/livestream_item"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 
     <com.twilio.video.VideoView
         android:id="@+id/livestream_my_viewholder_videoview"
         app:overlaySurface="true"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
