1. Solved: chat messages appear and chat entry EditText is focused when stages are swaped

--- a/videosdk/src/main/res/layout/activity_live_session.xml
+++ b/videosdk/src/main/res/layout/activity_live_session.xml
@@ -34,6 +34,12 @@
 
     </FrameLayout>
 
+    <LinearLayout
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:layout_width="0px"
+        android:layout_height="0px"/>
+
     <include
         android:id="@+id/layout_chat"
         layout="@layout/layout_chat"
