--- a/videosdk/src/main/res/drawable/background_enter_chat_message.xml
+++ b/videosdk/src/main/res/drawable/background_enter_chat_message.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <corners android:radius="10dp"/>
     <stroke
-        android:color="@android:color/darker_gray"
+        android:color="@color/media_drawer_share_bckgrnd"
         android:width="1dp"/>
 </shape>
